@@ -2,6 +2,7 @@
 -   Districts percent info
 -   Buildings max buy
 -   Fleet updater max level
+-   New notifications options
 
 3/09/2020
 -   Buy menu on top
